--- a/main.css
+++ b/main.css
@@ -1,20 +1,45 @@
 body {
     display: flex;
     flex-direction: row;
+    margin: 0;
 }
 
 .left-picture-panel {
-    flex: 0;
+    display: flex;
     height: 100vh;
     width: 30vw;
-    
+    align-items: center;
+    justify-content: center;
+    background-image: url(images/bun.jpg);
+    background-position: center;    
+    background-size: 160vh;
+    background-repeat: no-repeat;
 }
 
-.left-picture-panel > img {
-    height: 100vh;
-    overflow: hidden;
-    
+.logo {
+    display: flex;
+    flex: 1;
+    padding: 25px;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    font-size: 52px;
+    background-color: rgba(0, 0, 0, 0.356);
+    justify-content: center;
+    gap: 10px;
+    margin-bottom: 50vh;
 }
+
+.logo > img {
+    width: 3rem;
+    height: 3rem;
+    padding: 0px;
+       
+}
+
+.panel-image > img {
+    height: 100vh;
+    overflow: hidden; 
+}
+
 
 .right-form-panel {
     display: flex;
@@ -22,6 +47,7 @@ body {
     background-color: aliceblue;
     justify-content: space-between;
     width: 70vw;
+    font-family: Arial, Helvetica, sans-serif;
     
 }
 
@@ -36,11 +62,48 @@ body {
     padding-left: 5vw;
  }   
 
- .right-middle-panel {
+ .right-middle-form {
     flex: 1;
+    padding-left: 5vw;
+    
  }
 
  .right-bottom-panel {
     flex: 1;
     background-color: rgb(231, 239, 243);
+    padding-left: 5vw;
+    padding-top: 5vh;
+    box-shadow: inset 0px 7px 8px 0px rgba(0, 0, 0, 0.266);
+ }
+
+ form {
+
+
+ }
+
+ fieldset {
+    border: none;
+    display: flex;
+    gap: 20px;
+    flex-wrap: wrap;
+    align-items: stretch;
+    padding-right: 30vw;
+    padding-bottom: 30px;
+    padding-left: 0;
+    font-weight: bold;
+    font-size: 12px;
+    
+ }
+
+ fieldset * {
+    flex: 1;
+
+ }
+
+  .right-bottom-panel > button {
+    border-radius: 12px;
+    padding: 15px 32px;
+    background-color: blanchedalmond;
+    font-size: 16px;
+    text-align: center;
  }
